--- a/shape_up_exercises/index.html
+++ b/shape_up_exercises/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title></title>
+	<meta charset="utf-8"/>
+	<meta name="descripcion" content="Esta informacion es para la Salud"/>
+	<title>Informacion de Salud</title>
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="images/shape_up_logo.png">
 </head>
-
 <body>
+	<header>
+		<img src="images/shape_up_logo.png" alt="No cargo la imagen" height="80">
+		<hgroup>
+			<h2>Shape Up!</h2>
+			<h3>Find the best for you</h3>
+			<h3>Get ready to Shape Up!</h3>
+		</hgroup>
+		<p>How many times have you started a new workout routine or diet? And how many times has it failed to give you the results you want? Now, with the help of this site, you can learn about the exercises and diet that work best for you. We offer personalized programs as well as access to several health and dieting tools. So don't wait! Get started looking and feeling better today.
+		</p>
+
+	</header>
+	<aside>
+		<h2>What we offer</h2>
+		<h3><a href="strength/index.html">Build strong muscles</a></h3>
+		<P>Tired of being tired? Strength training can help you manage or lose weight and increase your metabolism to help you burn more calories. It can also increase bone density and reduce the risk of osteoporosis.
+		</P>
+		<h3><a href="cardio/index.html">Get your heart rate up</a></h3>
+		<P>Want to lose weight? Cardiovascular exercise burns calories and improves overall health. It can reduce belly fat, promote brain growth, prevent stress, and help you focus.</P>
+		<h3><a href="images/meditate.jpg">Relax</a></h3>
+		<P>Stressed out? Stress can weaken the immune system and cause high blood pressure, fatigue, depression, anxiety, and even heart disease. Learn ways to manage and reduce stress.</P>
+		<h3><a href="">Eat what's right for you</a></h3>
+		<P>Are you really what you eat? Lose weight, gain weight, or just feel great! Maintaining a healthy diet is probably the most important thing you can do to promote overall health.
+		</P>
+	</aside>
 	
-</body>
+	<nav id="nav_menu">
+		<h2>Additional resources</h2>
+    	<ul>
+        	<li><a href="diet/index.html" class="current">Physical activity and health</a></li>
+        	<li><a href="stress/index.html">Stretching exercises</a></li>
+        	<li><a href="strength/index.html">Strength training</a></li>
+        	<li><a href="cardio/index.html">Cardiovascular training</a></li>
+        	<li><a href="stress/meditate.html"> Yoga workout</a>
+        	</li>
+    	</ul>
+	</nav>
+	
+	<footer>
+		<p>&copy; 2022, Shape Up!</p>
+	</footer>
 </html>
