--- a/shape_up_exercises/index.html
+++ b/shape_up_exercises/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8"/>
 	<meta name="descripcion" content="Esta informacion es para la Salud"/>
 	<title>Informacion de Salud</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="..images/shape_up_logo.png">
+	<link rel="shortcut icon" href="./images/favicon.ico">
+	<link rel="stylesheet" href="../images/shape_up_logo.png">
 </head>
 <body>
 	<header>
