--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<meta name="descripcion" content="Esta informacion es para la Salud"/>
 	<title>Informacion de Salud</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="shape_up_exercises/images/favicon.ico">
 	<link rel="stylesheet" href="images/shape_up_logo.png">
 </head>
 <body>
